# aoc

./: .gitignore  .golangci.yaml  LICENSE  README.md  day02.ml  day03.ml
2015/: .gitignore  Makefile  README  go.mod  harness.sh
2015/cmd/: harness.go
2015/common/: go.mod
2015/day1/: go.mod  main.go
2015/day10/: exercise.txt  go.mod  lookandsay.go  lookandsay_test.go  main.go
2015/day10m/: main.go
2015/day12/: add_test.go  go.mod  main.go
2015/day12m/: main.go
2015/day13/: problem.go
2015/day1m/: main.go
2015/day2/: area_test.go  exercise.txt  go.mod  main.go
2015/day2m/: main.go
2015/day3/: go.mod  main.go  presents.go
2015/day3m/: main.go
2015/day4/: adventcoin.go  exercise.txt  go.mod  main.go
2015/day4m/: main.go
2015/day5/: go.mod  main.go  niceness_test.go
2015/day5m/: main.go
2015/day6/: go.mod  lights_test.go  main.go  parser.go  parser.y
2015/day6m/: main.go
2015/day7/: Makefile  go.mod  identifier.go  main.go  node.go
2015/day7m/: main.go
2015/day8/: go.mod  main.go
2015/day8m/: main.go
2015/day9/: contains.go  go.mod  go.sum  main.go  scan.go
2015/day9m/: main.go
2015/helpers/: io.go  maths.go  maths_test.go
2015/solutions/: execute.go  gen.go
2016/: aoc2016.opam  day01.ml  day02.ml  day03.ml  day04.ml  dune-project
2016/lib/: asmb.ml  asmb_lexer.mll  asmb_parser.mly  day01.ml  day01.mli  day02.ml  day02.mli  day03.ml  day03.mli  day04.ml  day04.mli  day05.ml  day05.mli  day06.ml  day07.ml  day07.mli  day08.ml  day08.mli  day08_aux.ml  day08_lexer.mll  day08_parser.mly  day09.ml  day10.ml  day10.mli  day10_aux.ml  day10_lexer.mll  day10_parser.mly  day11.ml  day11_aux.ml  day11_lexer.mll  day11_parser.mly  day12.ml  day12.mli  day13.ml  day13.mli  day14.ml  day15.ml  dune  io.ml  io.mli  (+3 more)
2017/: README  README.md
2017/day01/: Makefile  README  README.md  captcha.py  captcha_tests.py  test_captcha.py
2017/day02/: README.md  checksum.py  test_checksum.py
2017/day04/: README.md  passphrases.py  test_passphrases.py
2017/day05/: README.md  jumps.py  test_jumps.py
2017/day06/: README.md  log.txt  reallocation.py  test_reallocation.py
2017/day07/: README.md  circus.py  test_circus.py
2017/day08/: README.md  registers.py  test_registers.py
2017/day09/: README.md  streams.py  test_streams.py
2017/day10/: README.md  knot.py  test_knot.py
2017/day11/: README.md  grid.py  test_grid.py
2017/day12/: README.md
2017/day13/: README.md
2017/day14/: Makefile  README.md
2017/day15/: README.md
2017/day16/: README.md
2017/day17/: README.md
2017/day18/: README.md
2017/day19/: README.md
2017/day20/: README.md
2017/day21/: README.md
2017/day22/: README.md
2017/day23/: README.md
2017/day24/: README.md
2017/day25/: README.md
2018/day01/: Cargo.toml  README.md
2018/day02/: README.md
2018/day03/: README.md
2018/day04/: README.md
2018/day06/: Cargo.toml
2019/: README.md
2020/: .gitignore  harness.py
2024/: .gitignore  .ocamlformat  README.md  aoc2024.opam  day01.py  day02.py  dune-project  notes.md
2024/day01/: solution.ml  solution.py
2024/day02/: solution.py
2024/day03/: solution.ml
2024/lib/: utils.ml
2024/lib/trie/: dune  trie.ml
2024/lib/utils/: dune  utils.ml
2025/: README.md  dune-project  justfile
2025/lib/utils/: utils.ml
day01/: README.md
day02/: Cargo.toml  README.md
day03/: Cargo.toml
day04/: Cargo.toml
day05/: Cargo.toml  README.md
day07/: Cargo.toml
day08/: Cargo.toml
day09/: Cargo.toml
day1/: exercise.txt  floors.go  floors_test.go
day10m/: main.go
day11/: Cargo.toml
day12/: add.go  add_test.go
day12m/: main.go
day13/: Cargo.toml
day14/: Cargo.toml
day1m/: main.go
day2/: area.go
day23/: Cargo.toml
day24/: Cargo.toml
day3/: exercise.txt  presents_test.go
day4/: adventcoin_test.go
day4m/: main.go
day5/: exercise.txt  niceness.go  niceness_test.go
day5m/: main.go
day6/: exercise.txt  lights.go  lights_test.go  parser_test.go
day6m/: main.go
day7/: Makefile  context.go  exercise.txt  lexer.nex  literal.go  logic.go  parser.y
day8/: exercise.txt  parse.go  scan.go
day8m/: main.go
day9/: exercise.txt  permute.go
day9m/: main.go
(+205 files in other folders)
