(lang dune 3.17)

(name aoc2025)

(generate_opam_files true)

(source
 (github kgaughan/aoc))

(authors "Keith Gaughan")

(maintainers "Keith Gaughan")

(license LICENSE)

(package
 (name aoc2025)
 (synopsis "Advent of Code 2025")
 (depends ocaml)
 (tags ("advent-of-code")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
