(library
 (name day01)
 (modules day01)
 (libraries io movement))

(library
 (name day02)
 (modules day02)
 (libraries io))

(library
 (name day03)
 (modules day03))

(library
 (name day04)
 (modules day04)
 (libraries str))

(library
 (name day05)
 (modules day05)
 (libraries io))

(library
 (name day06)
 (modules day06)
 (libraries io))

(library
 (name day07)
 (modules day07)
 (libraries io))

(library
 (name day08)
 (modules day08 day08_lexer day08_parser day08_aux))

(ocamllex day08_lexer)

(ocamlyacc day08_parser)

(library
 (name day09)
 (modules day09)
 (libraries io))

(library
 (name io)
 (modules io))

(library
 (name movement)
 (modules movement))
