(library
 (name day01)
 (modules day01)
 (libraries io movement))

(library
 (name day02)
 (modules day02)
 (libraries io))

(library
 (name day03)
 (modules day03))

(library
 (name day04)
 (modules day04)
 (libraries str))

(library
 (name day05)
 (modules day05)
 (libraries io))

(library
 (name day06)
 (modules day06)
 (libraries io))

(library
 (name day07)
 (modules day07)
 (libraries io))

(library
 (name day08)
 (modules day08 day08_lexer day08_parser day08_aux))

(library
 (name day09)
 (modules day09)
 (libraries io))

(library
 (name day10)
 (modules day10 day10_lexer day10_parser day10_aux))

(library
 (name day11)
 (modules day11 day11_lexer day11_parser day11_aux))

(library
 (name day12)
 (modules day12)
 (libraries assembunny))

(library
 (name day13)
 (modules day13)
 (libraries io))

(library
 (name day14)
 (modules day14)
 (libraries io))

(library
 (name day15)
 (modules day15))

(ocamllex asmb_lexer day08_lexer day10_lexer day11_lexer)

(ocamlyacc asmb_parser day08_parser day10_parser day11_parser)

(library
 (name assembunny)
 (modules asmb asmb_lexer asmb_parser))

(library
 (name io)
 (modules io))

(library
 (name movement)
 (modules movement))

(library
 (name numeric)
 (modules numeric))
